
version 1.8.1, October 17, 2011
-------------------------------
 o module Gmap now has a signature for edges (E_SRC) compatible with
   Sig, so that it is easier to apply functor Gmap.Edge
   (contributed by Markus W. Weissmann <markus.weissmann@in.tum.de>)
 o new module Fixpoint to compute fixpoints using the work-list
   algorithm, e.g. for data flow analysis
   (contributed by Markus W. Weissmann <markus.weissmann@in.tum.de>)

version 1.8, October 4, 2011
----------------------------
 o removed ocamlyacc shift/reduce conflict in dot_parser.mly
   (patch contributed by Till Varoquaux)
 o Dgraph: Correct height and width-related problems with text
 o DGraph: many bug fixes. Patch by Benjamin Monate
 o Sig.G: new function [find_all_edges] for each graph implementation
 o Oper: fixed bug with function [intersect]: now use G.E.compare instead of (=)
 o fixed "make install-findlib"

version 1.7, February 23, 2011
------------------------------
 o Makefile: fixed bug when installing ocamlgraph with ocamlfind
 o DGraph: fixed bug with colors on some windows manager
 o Configure: fixed issue with automatic detection of extension under
   Windows/Mingw

version 1.6, December 13, 2010
------------------------------
 o DGraph: new viewer mode (called `tree') which focus on a subset part of the
   graph centered on a given node
 o Graphviz: fixed bug with attribute `Constraint (was `Constraints) (patch by
   Boris Yakobowski)
 o DGraph: fixed font size issue when zooming
 o DGraph: now interpret text anchors and espaced sequences correctly
 o DGraph: offer possibility to disable the default callbacks on nodes
 o 'make -j' works again
 o new implementation Persistent.Digraph.ConcreteBidirectionalLabeled
 o new implementation Persistent.Digraph.ConcreteBidirectional
 o Makefile: bug fixed when ocamlc (resp. ocamlopt) and ocamlc.opt
   (resp. ocamlopt.opt) are unconsistent

version 1.5, April 29, 2010
---------------------------